force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/ucinn_ascendv2__Bio_Demo_Setting__mdt.object-meta.xml
<CustomObject>
    <description>For settings that pertain to Bio Demo in general</description>
    <label>Bio Demo Setting</label>
    <pluralLabel>Bio Demo Settings</pluralLabel>
</CustomObject>