force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Constituent_Related_Objects_To_Delete__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Constituent_Related_Objects_To_Delete__c</fullName>
    <description>When deleting the contact record, these objects that are associated with the contact will also be deleted.</description>
    <inlineHelpText>Object field api names that are related to contacts separated by commas.</inlineHelpText>
    <label>Constituent Related Objects To Delete</label>
    <length>1111</length>
    <type>LongTextArea</type>
</CustomField>