force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Contact_Full_Name_Processing_Method__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact_Full_Name_Processing_Method__c</fullName>
    <description>When inserting or updating an existing name to type &quot;Full Name&quot;, this setting controls whether we delete the other records, or change the other records to &quot;Former&quot;.</description>
    <inlineHelpText>When inserting or updating an existing name to type &quot;Full Name&quot;, this setting controls whether we delete the other records, throw a validation, or change the other records to &quot;Former&quot;.</inlineHelpText>
    <label>Constituent Full Name Processing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change</fullName>
                <default>true</default>
                <label>Change</label>
            </value>
            <value>
                <fullName>Validate</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>