force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Default_Constituent_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Default_Constituent_Type__c</fullName>
    <description>If no constituent type is chosen, we will default to using this constituent type. Uses the API name of the picklist value.</description>
    <inlineHelpText>If no constituent type is chosen, we will default to using this constituent type. Uses the API name of the picklist value.</inlineHelpText>
    <label>Default Constituent Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>