force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Degree_Type_Mapping_Source_Field__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Type_Mapping_Source_Field__c</fullName>
    <inlineHelpText>This is the field in the object whose value will be used to perform the Degree Type mapping.</inlineHelpText>
    <label>Degree Type Mapping Source Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>