force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Degree_Type_Mapping_Source_Object__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Type_Mapping_Source_Object__c</fullName>
    <description>This is the object whose &apos;degree/degree level&apos; value will be used to summarize the donor&apos;s degree information to the contact record.</description>
    <inlineHelpText>This is the object whose &apos;degree/degree level&apos; value will be used to summarize the donor&apos;s degree information to the contact record.</inlineHelpText>
    <label>Degree Type Mapping Source Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ucinn_ascendv2__Degree_Code__c</fullName>
                <default>true</default>
                <label>ascend Degree Code Object</label>
            </value>
            <value>
                <fullName>ucinn_ascendv2__Degree_Information__c</fullName>
                <label>ascend Degree Information Object</label>
            </value>
            <value>
                <fullName>ucinn_ascendv2__Post_Code__c</fullName>
                <label>ascend Post Code Object</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>