force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Degree_Type_Priority_List__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Type_Priority_List__c</fullName>
    <description>Comma Separated Values that define the order of degree types to consider from Degree Code: Degree Level</description>
    <inlineHelpText>Comma Separated Values that define the order of degree types to consider from Degree Code: Degree Level</inlineHelpText>
    <label>Degree Type Priority List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>