force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Delete_Organization_With_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Delete_Organization_With_Opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine if we allow the user to delete organizations if they have opportunities</description>
    <inlineHelpText>Check to allow deletion of organizations that have opportunities, uncheck to not allow deletion of organizations that have opportunities</inlineHelpText>
    <label>Allow deletion of Orgs with Oppties</label>
    <type>Checkbox</type>
</CustomField>