force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Department_Field_Names__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Department_Field_Names__c</fullName>
    <description>Define a list of fields that outline what departments are associated with a hospital visit.</description>
    <inlineHelpText>Define a list of fields that outline what departments are associated with a hospital visit.
EX: [&apos;Field_1&apos;, &apos;Field_2&apos;]</inlineHelpText>
    <label>Hospital Visit Department Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>