force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Enable_Auto_ACR_Deletion_v1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Auto_ACR_Deletion_v1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to allow ascend to automatically delete any sibling household AccountContactRelation (ACR) records when a new household ACR is created. This is mostly to allow for data migration to merge households easily by loading ACR records.</description>
    <inlineHelpText>Enable this setting to allow ascend to automatically delete any sibling household AccountContactRelation (ACR) records when a new household ACR is created. This is mostly to allow for data migration to merge households easily by loading ACR records.</inlineHelpText>
    <label>Enable Auto ACR Deletion</label>
    <type>Checkbox</type>
</CustomField>