force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Enable_International_Autocomplete__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_International_Autocomplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables International Autocomplete and country picklist next to auto complete lookup. Currently leveraged by SmartyStreets International Autocomplete API.</description>
    <inlineHelpText>Enables International Autocomplete and country picklist next to auto complete lookup. Currently leveraged by SmartyStreets International Autocomplete API.</inlineHelpText>
    <label>Enable International Autocomplete</label>
    <type>Checkbox</type>
</CustomField>