force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Enable_Physician_Assignment_Sharing__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Physician_Assignment_Sharing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the development officer is given access to patient and hospital visit records related to physicians that the development officer have been assigned with when sharing settings for constituents and hospital visits are set to private.</description>
    <inlineHelpText>When checked, the development officer is given access to patient and hospital visit records related to physicians that the development officer have been assigned with when sharing settings for constituents and hospital visits are set to private.</inlineHelpText>
    <label>Enable Physician Assignment Sharing</label>
    <type>Checkbox</type>
</CustomField>