force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Excluded_Email_Statuses__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Excluded_Email_Statuses__c</fullName>
    <inlineHelpText>Enter a JSON list of email statuses which should not be bubbled up to appear on the constituent overview. The leftmost value will be what other email statuses are set to when multiple current phones are disabled. If blank, all statuses will bubble up.</inlineHelpText>
    <label>Excluded Email Statuses</label>
    <type>TextArea</type>
</CustomField>