force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Field_Mapping_To_Reciprocal_Related_Org__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Field_Mapping_To_Reciprocal_Related_Org__c</fullName>
    <description>A mapping from source related organization fields to reciprocal related organization fields. Copies listed custom fields from source to reciprocal.</description>
    <inlineHelpText>A mapping from source related organization fields to reciprocal related organization fields. Copies listed custom fields from source to reciprocal.</inlineHelpText>
    <label>Field Mapping To Reciprocal Related Org</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>