force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Field_Mapping_to_Reciprocal_Relationship__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Field_Mapping_to_Reciprocal_Relationship__c</fullName>
    <description>A map from source relationship fields to reciprocal relationship fields.</description>
    <inlineHelpText>A map from source relationship fields to reciprocal relationship fields.</inlineHelpText>
    <label>Field Mapping to Reciprocal Relationship</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>