force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Hospital_Visits_trigger__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hospital_Visits_trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable/Disable constituent trigger functionality that updates hospital visit count information.</description>
    <inlineHelpText>Enable/Disable constituent trigger functionality that updates hospital visit count information.</inlineHelpText>
    <label>Enable Top Visited Department Trigger</label>
    <type>Checkbox</type>
</CustomField>