force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Hospital_Visits_Where_Count__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hospital_Visits_Where_Count__c</fullName>
    <description>Filter what hospital visits are checked when counting up department visits.</description>
    <inlineHelpText>Filter what hospital visits are checked when counting up department visits. Provided as a formula in the following format:

ucinn_ascendv2__Admit_Date__c &lt;= TODAY AND ucinn_ascendv2__Encounter_Type__c = &apos;Recurring&apos;</inlineHelpText>
    <label>Hospital Visit Department Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>