force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Household_Name_Connector__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Household_Name_Connector__c</fullName>
    <description>Joins multiple constituents together in the household name.</description>
    <inlineHelpText>Joins multiple constituents together in the household name.</inlineHelpText>
    <label>Household Name Connector</label>
    <length>20</length>
    <type>Text</type>
</CustomField>