force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Household_Name_Overrun__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Household_Name_Overrun__c</fullName>
    <description>Text value that replaces a long list of names in a Household Name.</description>
    <inlineHelpText>Text value that replaces a long list of names in a Household Name.</inlineHelpText>
    <label>Household Name Overrun</label>
    <length>100</length>
    <type>Text</type>
</CustomField>