force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Household_Name_Overrun_Count__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Household_Name_Overrun_Count__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Number that indicates the maximum number of names to show. After this number, the Household Name Overrun text will be substituted for the remaining names.</description>
    <inlineHelpText>Number that indicates the maximum number of names to show. After this number, the Household Name Overrun text will be substituted for the remaining names.</inlineHelpText>
    <label>Household Name Overrun Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>