force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Household_Naming_Convention__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Household_Naming_Convention__c</fullName>
    <description>The naming convention rule for the household name.</description>
    <inlineHelpText>The naming convention rule for the household name.</inlineHelpText>
    <label>Household Naming Convention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>