force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Household_to_Member_Mapping_v1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Household_to_Member_Mapping_v1__c</fullName>
    <inlineHelpText>A mapping listing the fields on the Household record to sync onto the related Household Member records.</inlineHelpText>
    <label>Household to Member Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>