force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Member_to_Household_Mapping__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Member_to_Household_Mapping__c</fullName>
    <inlineHelpText>A mapping listing the fields on the related Household member records to sync onto the corresponding Household record.</inlineHelpText>
    <label>Member to Household Mapping (DEPR)</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>