force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Member_to_Household_Mapping_v1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Member_to_Household_Mapping_v1__c</fullName>
    <inlineHelpText>A mapping listing the fields on the Primary Constituent to sync onto the corresponding Household record.</inlineHelpText>
    <label>Member to Household Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>