force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Organizations_Related_Objects_To_Delete__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Organizations_Related_Objects_To_Delete__c</fullName>
    <description>When deleting the Account record, these objects that are associated with the Account will also be deleted.</description>
    <inlineHelpText>Object field api names that are related to accounts separated by commas.</inlineHelpText>
    <label>Organizations Related Objects To Delete</label>
    <length>1111</length>
    <type>LongTextArea</type>
</CustomField>