force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__Populate_Preferred_Class_Year__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Populate_Preferred_Class_Year__c</fullName>
    <description>Choose to populate the preferred class year with the first or last affinity class year</description>
    <inlineHelpText>Choose to populate the preferred class year with the first or last affinity class year</inlineHelpText>
    <label>Populate Preferred Class Year (DEPR)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Degree</fullName>
            </value>
            <value>
                <fullName>Last Degree</fullName>
                <default>true</default>
                <label>Last Degree</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>