force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__SmartyStreet_Timeout_Limit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__SmartyStreet_Timeout_Limit__c</fullName>
    <defaultValue>60</defaultValue>
    <description>The time in seconds to wait for a response from Smarty. The minimum is 1 second and the maximum is 120 seconds.</description>
    <inlineHelpText>The time in seconds to wait for a response from Smarty. The minimum is 1 second and the maximum is 120 seconds.</inlineHelpText>
    <label>SmartyStreets Timeout Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>