force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__SmartyStreets_Country_Code_Map__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__SmartyStreets_Country_Code_Map__c</fullName>
    <description>Map of supported SmartyStreets countries to their corresponding ISO3 codes which are required to make callouts to the SmartyStreets international autocomplete API.</description>
    <inlineHelpText>Map of supported SmartyStreets countries to their corresponding ISO3 codes which are required to make callouts to the SmartyStreets international autocomplete API.</inlineHelpText>
    <label>SmartyStreets Country Code Map</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>