force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__SmartyStreets_Default_Country_v1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__SmartyStreets_Default_Country_v1__c</fullName>
    <description>Default country value for SmartyStreets international autocomplete.</description>
    <inlineHelpText>Default country value for SmartyStreets international autocomplete.</inlineHelpText>
    <label>SmartyStreets Default Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>