force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__SmartyStreets_Int_Address_Search_Map__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__SmartyStreets_Int_Address_Search_Map__c</fullName>
    <label>SmartyStreets Int Address Search Map</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>