force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__SmartyStreets_International_Field_Map__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__SmartyStreets_International_Field_Map__c</fullName>
    <description>Mapping of SmartyStreets international fields to ascend address fields.</description>
    <inlineHelpText>Example: {&quot;Verification_Status__c&quot;:{&quot;analysis&quot;:&quot;verification_status&quot;}, &quot;Address_Precision__c&quot;:{&quot;analysis&quot;:&quot;address_precision&quot;}}</inlineHelpText>
    <label>SmartyStreets International Field Map</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>