force-app/main/default/objects/ucinn_ascendv2__Bio_Demo_Setting__mdt/fields/ucinn_ascendv2__SmartyStreets_License_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__SmartyStreets_License_Type__c</fullName>
    <description>The license type specifies the license or licenses (comma separated) to use for this lookup.  Leave blank or either &apos;us-core-cloud&apos; for US Address Verification, Core Edition, Cloud License or &apos;us-standard-cloud&apos; for US Address Verification, Legacy Standard Edition, Cloud License.</description>
    <inlineHelpText>The license type specifies the license or licenses (comma separated) to use for this lookup.  Leave blank or either &apos;us-core-cloud&apos; for US Address Verification, Core Edition, Cloud License or &apos;us-standard-cloud&apos; for US Address Verification, Legacy Standard Edition, Cloud License.</inlineHelpText>
    <label>SmartyStreets License Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>